--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,5 +20,8 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+        "react-in-jsx-scope": "off",
+        "jsx-a11y/anchor-is-valid": "off"
     }
 }
