--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "classnames": "^2.3.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
