--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "eslint": "^8.23.1",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-number-format": "^4.9.3",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -23,11 +29,12 @@
     "@storybook/addon-essentials": "^6.4.3",
     "@storybook/addon-links": "^6.4.3",
     "@storybook/react": "^6.4.3",
+    "@types/aos": "^3.0.4",
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "babel-loader": "^8.2.3",
-    "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
